Fix Highland Express schedule scrolling
The schedule added several destinations but was still constrained to
the width of the screen, so the new destinations were cut off. This
commit adds support for horizontal scrolling in the schedule view. The
<ion-scroll> directive did not work as a drop-in like it should have,
hence the getDimensions() function and the inline styles in the view.
This solution automatically sizes the schedule <ion-scroll> based on
the number of rows and columns in the schedule.

--- a/scss/_moduleviews.scss
+++ b/scss/_moduleviews.scss
@@ -65,7 +65,12 @@
       }
     }
     .highland-schedule {
+      height: 100vh; width: 100vw;
+      margin-bottom: 20px;
       background-color: color(light-gray);
+      .highland-schedule-inner {
+        margin-bottom: 20px;
+      }
       .row {
         margin: -1px;
         padding-left: 10px;
@@ -75,6 +80,7 @@
           border-width: 2px;
         }
         .col {
+          min-width: 100px;
           text-align: center;
         }
       }
